# Chess

./: CMakeLists.txt
ChinessChess/: CMakeLists.txt  ChineseChess.pro  aimode.cpp  aimode.h  board.cpp  board.h  board.qrc  chessman.cpp  chessman.h  chessman.qrc  chessman1.qrc  chessman2.qrc  compconfig.h  controlpanel.cpp  controlpanel.h  dockctrlpanel.h  icon.qrc  imgaes.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mylog.cpp  mylog.h  netclient.cpp  netclient.h  one.qrc  rule.cpp  rule.h  rule.ui  selectdialog.cpp  selectdialog.h  sets.cpp.autosave  sets.h  sets.h.autosave  stacked.cpp  stacked.h  stackedpage.cpp  stackedpage.h
Reversi/: CMakeLists.txt  aimode.cpp  aimode.h  base.cpp  base.h  h.pro  images.qrc  main.cpp  netmode.cpp  netmode.h  selectdialog.cpp  selectdialog.h  stacked.cpp  stacked.h  stackedpage.cpp  stackedpage.h
Server/: CMakeLists.txt  ChinessChessServer.pro  main.cpp  tcpserver.cpp  tcpserver.h
